k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-dashboard
  namespace: metrics-dashboard-dev
  labels:
    app: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard
          image: harbor.devops.nexbridge.co.tz/CHANGE_ME_harbor_project/metrics-dashboard:CHANGE_ME_tag
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8090
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
