k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: tv
      port: 32029
      targetPort: http
      nodePort: 32029
      protocol: TCP
